--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,10 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="grey">#222831</color>
+    <color name="light_grey">#393E46</color>
+    <color name="turqoise">#00ADB5</color>
+    <color name="white_2">#E8E6E3</color>
+    <color name="red">#EB0700</color>
+    <color name="yellow">#FF7900</color>
 </resources>
