Added recyclerview layout that contains spinner and chart in MonitoringPerformanceFragment

--- a/app/src/main/res/layout/fragment_monitoring_performance.xml
+++ b/app/src/main/res/layout/fragment_monitoring_performance.xml
@@ -3,19 +3,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/light_grey"
+    android:background="@color/grey"
+    android:padding="10dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".views.monitoring.MonitoringPerformanceFragment">
 
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_perform_chart"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:gravity="center"
-        android:textColor="@color/white_2"
-        android:text="tes performa" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:listitem="@layout/item_list_performance"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
