--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -27,5 +27,9 @@
         <item name="fontFamily">@font/os_bold</item>
         <item name="textAllCaps">false</item>
     </style>
+    
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light">
+        <item name="android:padding">5dp</item>
+    </style>
 
 </resources>
