--- a/app/src/main/res/layout/item_list_history.xml
+++ b/app/src/main/res/layout/item_list_history.xml
@@ -5,10 +5,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:paddingVertical="5dp"
-    android:paddingHorizontal="10dp">
+    android:paddingHorizontal="5dp">
 
     <TextView
-        android:id="@+id/tv_type_chart_performance"
+        android:id="@+id/tv_history_type_chart"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Disk I/O"
@@ -17,21 +17,21 @@
         android:fontFamily="@font/cg_bold"
         android:layout_marginBottom="10dp"/>
 
-    <Spinner
-        android:id="@+id/sp_type_chart_performance"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:spinnerMode="dropdown"
-        android:background="@drawable/bg_spinner_rounded_white"
-        android:paddingHorizontal="10dp"
-        android:paddingVertical="5dp"
-        android:layout_marginBottom="10dp"
-        android:theme="@style/ThemeOverlay.AppCompat.Light"
-        android:popupBackground="@color/grey"
-        app:popupTheme="@style/AppTheme.PopupOverlay"/>
+<!--    <Spinner-->
+<!--        android:id="@+id/sp_history_type_chart"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:spinnerMode="dropdown"-->
+<!--        android:background="@drawable/bg_spinner_rounded_white"-->
+<!--        android:paddingHorizontal="10dp"-->
+<!--        android:paddingVertical="5dp"-->
+<!--        android:layout_marginBottom="10dp"-->
+<!--        android:theme="@style/ThemeOverlay.AppCompat.Light"-->
+<!--        android:popupBackground="@color/grey"-->
+<!--        app:popupTheme="@style/AppTheme.PopupOverlay"/>-->
 
     <com.github.mikephil.charting.charts.LineChart
-        android:id="@+id/lc_perform_latency_chart"
+        android:id="@+id/lc_history_latency_chart"
         android:layout_width="match_parent"
         android:layout_height="230dp"
         android:background="@color/white_2"
