feat[server condition]: merging the server performance and physical fragment into one fragment

--- a/app/src/main/res/layout/fragment_monitoring_physical.xml
+++ b/app/src/main/res/layout/fragment_monitoring_physical.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,141 +7,96 @@
     android:padding="10dp"
     android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".views.monitoring.physical.MonitoringPhysicalFragment">
+    tools:context=".views.monitoring.MonitoringPhysicalFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
         android:orientation="vertical">
 
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
-            android:fontFamily="@font/os_bold"
-            android:textSize="16sp"
-            android:textColor="@color/white"
-            android:text="Resources"
-            android:gravity="center"/>
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/tv_phys_proc_util"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
-            android:fontFamily="@font/os_regular"
-            android:textSize="14sp"
-            android:textColor="@color/white"
-            android:text="Processor: 50%"
-            android:gravity="center_vertical"
-            app:drawableStartCompat="@drawable/ic_processor"
-            android:drawablePadding="5dp"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:fontFamily="@font/os_bold"
+                android:textSize="16sp"
+                android:textColor="@color/white"
+                android:text="Resources"
+                android:gravity="center"/>
 
-        <TextView
-            android:id="@+id/tv_phys_mem_util"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
-            android:fontFamily="@font/os_regular"
-            android:textSize="14sp"
-            android:textColor="@color/white"
-            android:text="Memory: 300MiB of 10GiB (3%)"
-            android:gravity="center_vertical"
-            app:drawableStartCompat="@drawable/ic_memory"
-            android:drawablePadding="5dp"/>
+            <TextView
+                android:id="@+id/tv_phys_proc_util"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
+                android:fontFamily="@font/os_regular"
+                android:textSize="14sp"
+                android:textColor="@color/white"
+                android:text="Processor: 50%"
+                android:gravity="center_vertical"
+                app:drawableStartCompat="@drawable/ic_processor"
+                android:drawablePadding="5dp"/>
 
-        <TextView
-            android:id="@+id/tv_phys_net_util"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
-            android:fontFamily="@font/os_regular"
-            android:textSize="14sp"
-            android:textColor="@color/white"
-            android:text="Network: 77.9KiB/s tx, 80.0KiB/s rx"
-            android:gravity="center_vertical"
-            app:drawableStartCompat="@drawable/ic_network"
-            android:drawablePadding="5dp"/>
+            <TextView
+                android:id="@+id/tv_phys_mem_util"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
+                android:fontFamily="@font/os_regular"
+                android:textSize="14sp"
+                android:textColor="@color/white"
+                android:text="Memory: 300MiB of 10GiB (3%)"
+                android:gravity="center_vertical"
+                app:drawableStartCompat="@drawable/ic_memory"
+                android:drawablePadding="5dp"/>
 
-        <TextView
-            android:id="@+id/tv_phys_drive_util"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:fontFamily="@font/os_regular"
-            android:textSize="14sp"
-            android:textColor="@color/white"
-            android:text="Drive: 600.0KiB/s write, 1000.1KiB/s read"
-            android:gravity="center_vertical"
-            app:drawableStartCompat="@drawable/ic_drive"
-            android:drawablePadding="5dp"/>
-        
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:background="@color/light_grey"/>
+            <TextView
+                android:id="@+id/tv_phys_net_util"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
+                android:fontFamily="@font/os_regular"
+                android:textSize="14sp"
+                android:textColor="@color/white"
+                android:text="Network: 77.9KiB/s tx, 80.0KiB/s rx"
+                android:gravity="center_vertical"
+                app:drawableStartCompat="@drawable/ic_network"
+                android:drawablePadding="5dp"/>
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/tv_phys_drive_util"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:fontFamily="@font/os_regular"
+                android:textSize="14sp"
+                android:textColor="@color/white"
+                android:text="Drive: 600.0KiB/s write, 1000.1KiB/s read"
+                android:gravity="center_vertical"
+                app:drawableStartCompat="@drawable/ic_drive"
+                android:drawablePadding="5dp"/>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:orientation="vertical">
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="@color/light_grey"/>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:fontFamily="@font/os_bold"
-            android:textSize="16sp"
-            android:textColor="@color/white"
-            android:text="Network Interfaces"
-            android:gravity="center"/>
+        </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_phys_net_interfaces"
+            android:id="@+id/rv_performance"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:listitem="@layout/item_list_net_interface"
+            tools:listitem="@layout/item_list_performance_parent"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:itemCount="2"/>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:background="@color/light_grey"/>
 
     </LinearLayout>
 
-<!--    <LinearLayout-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginBottom="10dp"-->
-<!--        android:orientation="vertical">-->
-
-<!--        <TextView-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginBottom="10dp"-->
-<!--            android:fontFamily="@font/os_bold"-->
-<!--            android:textSize="16sp"-->
-<!--            android:textColor="@color/white"-->
-<!--            android:text=""-->
-<!--            android:gravity="center"/>-->
-
-<!--        <androidx.recyclerview.widget.RecyclerView-->
-<!--            android:id="@+id/rv_phys_net_interfaces"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            tools:listitem="@layout/item_list_net_interface"-->
-<!--            tools:itemCount="2"/>-->
-
-<!--        <View-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="2dp"-->
-<!--            android:background="@color/light_grey"/>-->
-
-<!--    </LinearLayout>-->
-
-</LinearLayout>
+</androidx.core.widget.NestedScrollView>
