--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="white_2">#E8E6E3</color>
     <color name="red">#EB0700</color>
     <color name="yellow">#FF7900</color>
+    <color name="transparent">#00000000</color>
 </resources>
