--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".views.home.HomeFragment">
 
@@ -62,90 +63,128 @@
         app:layout_constraintStart_toStartOf="parent"
         android:background="@color/light_grey"/>
 
-   <RelativeLayout
-       android:id="@+id/rl_home_header_container"
+   <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       android:background="@color/grey"
-       android:paddingTop="10dp"
-       android:paddingHorizontal="10dp"
+       android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@id/view_home_header_line"
        app:layout_constraintEnd_toEndOf="parent"
-       app:layout_constraintStart_toStartOf="parent">
+       app:layout_constraintStart_toStartOf="parent"
+       app:layout_constraintBottom_toBottomOf="parent">
 
-       <TextView
-           android:id="@+id/tv_home_header_status"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:layout_centerHorizontal="true"
-           android:text="Online for 1 days, 32 minutes, 13 seconds."
-           android:textSize="14sp"
-           android:textColor="@color/white_2"
-           android:fontFamily="@font/os_medium"
-           android:layout_alignParentTop="true"/>
-
-       <LinearLayout
+       <RelativeLayout
+           android:id="@+id/rl_home_header_container"
            android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:layout_below="@id/tv_home_header_status"
-           android:paddingHorizontal="10dp"
-           android:layout_marginTop="10dp"
-           android:orientation="horizontal">
+           android:layout_height="0dp"
+           app:layout_constraintTop_toTopOf="parent"
+           app:layout_constraintEnd_toEndOf="parent"
+           app:layout_constraintStart_toStartOf="parent"
+           android:background="@color/grey"
+           android:paddingTop="10dp"
+           android:paddingHorizontal="10dp">
 
-           <com.google.android.material.button.MaterialButton
-               android:id="@+id/btn_home_header_shutdown"
-               android:layout_width="0dp"
+           <TextView
+               android:id="@+id/tv_home_header_status"
+               android:layout_width="wrap_content"
                android:layout_height="wrap_content"
-               android:layout_weight="1"
-               android:backgroundTint="@color/red"
-               android:textAllCaps="false"
-               android:text="Shutdown"
+               android:layout_centerHorizontal="true"
+               android:text="Online for 1 days, 32 minutes, 13 seconds."
                android:textSize="14sp"
-               android:fontFamily="@font/cg_bold"
-               app:cornerRadius="10dp"/>
+               android:textColor="@color/white_2"
+               android:fontFamily="@font/os_medium"
+               android:layout_alignParentTop="true"/>
 
-           <View
-               android:layout_width="0dp"
-               android:layout_height="0dp"
-               android:layout_weight="0.2"/>
-
-           <com.google.android.material.button.MaterialButton
-               android:id="@+id/btn_home_header_reboot"
-               android:layout_width="0dp"
+           <LinearLayout
+               android:layout_width="match_parent"
                android:layout_height="wrap_content"
-               android:layout_weight="1"
-               android:backgroundTint="@color/yellow"
-               android:textAllCaps="false"
-               android:text="Soft Reboot"
-               android:textSize="14sp"
-               android:fontFamily="@font/cg_bold"
-               app:cornerRadius="10dp"/>
+               android:layout_below="@id/tv_home_header_status"
+               android:paddingHorizontal="10dp"
+               android:layout_marginTop="10dp"
+               android:orientation="horizontal">
 
-       </LinearLayout>
+               <com.google.android.material.button.MaterialButton
+                   android:id="@+id/btn_home_header_shutdown"
+                   android:layout_width="0dp"
+                   android:layout_height="wrap_content"
+                   android:layout_weight="1"
+                   android:backgroundTint="@color/red"
+                   android:textAllCaps="false"
+                   android:text="Shutdown"
+                   android:textSize="14sp"
+                   android:fontFamily="@font/cg_bold"
+                   app:cornerRadius="10dp"/>
 
-   </RelativeLayout>
+               <View
+                   android:layout_width="0dp"
+                   android:layout_height="0dp"
+                   android:layout_weight="0.2"/>
 
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/tl_home_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/grey"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/rl_home_header_container"
-        app:tabIndicatorColor="@color/white"
-        app:tabSelectedTextAppearance="@style/TabTextSelected"
-        app:tabSelectedTextColor="@color/white"
-        app:tabTextAppearance="@style/TabTextUnselected"
-        app:tabTextColor="@color/white_2"/>
+               <com.google.android.material.button.MaterialButton
+                   android:id="@+id/btn_home_header_reboot"
+                   android:layout_width="0dp"
+                   android:layout_height="wrap_content"
+                   android:layout_weight="1"
+                   android:backgroundTint="@color/yellow"
+                   android:textAllCaps="false"
+                   android:text="Soft Reboot"
+                   android:textSize="14sp"
+                   android:fontFamily="@font/cg_bold"
+                   app:cornerRadius="10dp"/>
 
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/vp_home_container"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/tl_home_container"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+           </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+       </RelativeLayout>
+
+       <com.google.android.material.tabs.TabLayout
+           android:id="@+id/tl_home_container"
+           android:layout_width="match_parent"
+           android:layout_height="0dp"
+           android:background="@color/grey"
+           app:layout_constraintEnd_toEndOf="parent"
+           app:layout_constraintStart_toStartOf="parent"
+           app:layout_constraintTop_toBottomOf="@id/rl_home_header_container"
+           app:tabIndicatorColor="@color/white"
+           app:tabSelectedTextAppearance="@style/TabTextSelected"
+           app:tabSelectedTextColor="@color/white"
+           app:tabTextAppearance="@style/TabTextUnselected"
+           app:tabTextColor="@color/white_2"/>
+
+       <androidx.viewpager2.widget.ViewPager2
+           android:id="@+id/vp_home_container"
+           android:layout_width="match_parent"
+           android:layout_height="0dp"
+           app:layout_constraintTop_toBottomOf="@id/tl_home_container"
+           app:layout_constraintBottom_toBottomOf="parent"
+           app:layout_constraintStart_toStartOf="parent"
+           app:layout_constraintEnd_toEndOf="parent"/>
+
+<!--       <androidx.swiperefreshlayout.widget.SwipeRefreshLayout-->
+<!--           android:id="@+id/sr_home_refresh"-->
+<!--           android:layout_width="match_parent"-->
+<!--           android:layout_height="0dp"-->
+<!--           app:layout_constraintTop_toTopOf="parent"-->
+<!--           app:layout_constraintEnd_toEndOf="parent"-->
+<!--           app:layout_constraintStart_toStartOf="parent"-->
+<!--           app:layout_constraintBottom_toBottomOf="parent">-->
+
+<!--           <androidx.constraintlayout.widget.ConstraintLayout-->
+<!--               android:layout_width="match_parent"-->
+<!--               android:layout_height="wrap_content">-->
+
+<!--               -->
+
+<!--           </androidx.constraintlayout.widget.ConstraintLayout>-->
+
+<!--           <androidx.core.widget.NestedScrollView-->
+<!--               android:layout_width="match_parent"-->
+<!--               android:layout_height="match_parent"-->
+<!--               android:fillViewport="true">-->
+
+<!--               -->
+
+<!--           </androidx.core.widget.NestedScrollView>-->
+
+<!--       </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>-->
+
+   </androidx.constraintlayout.widget.ConstraintLayout>
+
+</LinearLayout>
