--- a/app/src/main/res/layout/fragment_monitoring_physical.xml
+++ b/app/src/main/res/layout/fragment_monitoring_physical.xml
@@ -57,6 +57,19 @@
                 android:drawablePadding="5dp"/>
 
             <TextView
+                android:id="@+id/tv_phys_disk_usage"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
+                android:fontFamily="@font/os_regular"
+                android:textSize="14sp"
+                android:textColor="@color/white"
+                android:text="Disk: 40GB of 80Gb (50%)"
+                android:gravity="center_vertical"
+                app:drawableStartCompat="@drawable/ic_hard_drive"
+                android:drawablePadding="5dp"/>
+
+            <TextView
                 android:id="@+id/tv_phys_net_util"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
