--- a/app/src/main/res/layout/item_list_performance_child_gauge.xml
+++ b/app/src/main/res/layout/item_list_performance_child_gauge.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:background="@color/grey"
+    android:background="@color/white"
     android:paddingStart="30dp"
     android:paddingEnd="0dp"
     android:layout_marginBottom="10dp">
@@ -16,7 +16,7 @@
         android:layout_marginBottom="5dp"
         android:fontFamily="@font/os_regular"
         android:textSize="14sp"
-        android:textColor="@color/white"
+        android:textColor="@color/grey"
         android:text="Transmit: 250KiB total"
         android:gravity="center_vertical"
         app:drawableStartCompat="@drawable/ic_transmit"
@@ -30,11 +30,11 @@
         app:sv_unit="KiB/s"
         app:sv_tickNumber="5"
         app:sv_indicator="QuarterLineIndicator"
-        app:sv_unitTextColor="@color/white"
-        app:sv_speedTextColor="@color/white"
+        app:sv_unitTextColor="@color/grey"
+        app:sv_speedTextColor="@color/grey"
         app:sv_centerCircleColor="@color/transparent"
         app:sv_speedometerMode="TOP"
-        app:sv_textColor="@color/white"
+        app:sv_textColor="@color/grey"
         app:sv_markColor="@color/transparent"
         app:sv_withTremble="false"
         app:sv_minSpeed="0.0"
