--- a/app/src/main/res/drawable/bg_switch_gauge_or_text.xml
+++ b/app/src/main/res/drawable/bg_switch_gauge_or_text.xml
@@ -3,8 +3,8 @@
     android:shape="rectangle">
 
     <corners android:radius="2dp"/>
-    <solid android:color="@color/grey"/>
+    <solid android:color="@color/white"/>
     <stroke android:width="1dp"
-        android:color="@color/white"/>
+        android:color="@color/grey"/>
 
 </shape>
