--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/light_grey"
+    android:background="@color/white"
     android:padding="10dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".views.history.HistoryFragment">
@@ -20,9 +20,9 @@
             android:id="@+id/tv_history_header"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Display data within :"
+            android:text="Displays data within :"
             android:textSize="16sp"
-            android:textColor="@color/white"
+            android:textColor="@color/grey"
             android:fontFamily="@font/cg_bold"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"/>
@@ -39,7 +39,7 @@
             android:layout_marginBottom="10dp"
             android:layout_marginStart="5dp"
             android:theme="@style/ThemeOverlay.AppCompat.Light"
-            android:popupBackground="@color/grey"
+            android:popupBackground="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_history_header"
@@ -54,7 +54,7 @@
         android:id="@+id/rv_history_chart"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="5dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/rl_history_header"
