--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,7 +11,7 @@
         android:id="@+id/appbar_home_header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/grey"
+        android:backgroundTint="@color/white"
         app:elevation="0dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,7 +37,7 @@
                     android:layout_alignParentStart="true"
                     android:text="Montor Kobong"
                     android:textSize="20sp"
-                    android:textColor="@color/white"
+                    android:textColor="@color/grey"
                     android:fontFamily="@font/cg_bold"/>
 
                 <ImageView
@@ -61,7 +61,7 @@
         app:layout_constraintTop_toBottomOf="@id/appbar_home_header"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:background="@color/light_grey"/>
+        android:background="@color/white_2"/>
 
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
@@ -78,7 +78,7 @@
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
-           android:background="@color/grey"
+           android:background="@color/white"
            android:paddingTop="10dp"
            android:paddingHorizontal="10dp">
 
@@ -89,7 +89,7 @@
                android:layout_centerHorizontal="true"
                android:text="Online for 1 days, 32 minutes, 13 seconds."
                android:textSize="14sp"
-               android:textColor="@color/white_2"
+               android:textColor="@color/grey"
                android:fontFamily="@font/os_medium"
                android:layout_alignParentTop="true"/>
 
@@ -138,15 +138,15 @@
            android:id="@+id/tl_home_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
-           android:background="@color/grey"
+           android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rl_home_header_container"
-           app:tabIndicatorColor="@color/white"
+           app:tabIndicatorColor="@color/grey"
            app:tabSelectedTextAppearance="@style/TabTextSelected"
-           app:tabSelectedTextColor="@color/white"
+           app:tabSelectedTextColor="@color/grey"
            app:tabTextAppearance="@style/TabTextUnselected"
-           app:tabTextColor="@color/white_2"/>
+           app:tabTextColor="@color/light_grey"/>
 
        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vp_home_container"
