--- a/app/src/main/res/layout/item_list_history.xml
+++ b/app/src/main/res/layout/item_list_history.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:text="Disk I/O"
         android:textSize="16sp"
-        android:textColor="@color/white"
+        android:textColor="@color/grey"
         android:fontFamily="@font/cg_bold"
         android:layout_marginBottom="10dp"/>
 
@@ -34,7 +34,7 @@
         android:id="@+id/lc_history_latency_chart"
         android:layout_width="match_parent"
         android:layout_height="230dp"
-        android:background="@color/white_2"
+        android:background="@drawable/bg_spinner_rounded_white"
         android:elevation="10dp"/>
 
 </LinearLayout>
