--- a/app/src/main/res/layout/item_list_performance_child.xml
+++ b/app/src/main/res/layout/item_list_performance_child.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/grey"
+    android:background="@color/white"
     android:layout_marginBottom="10dp"
     android:orientation="vertical">
 
@@ -15,7 +15,7 @@
         android:layout_marginBottom="5dp"
         android:fontFamily="@font/os_regular"
         android:textSize="14sp"
-        android:textColor="@color/white"
+        android:textColor="@color/grey"
         android:text="lo: 77.9KiB/s (250KiB total)"
         android:gravity="center_vertical"
         app:drawableStartCompat="@drawable/ic_net_interface"
