--- a/app/src/main/res/layout/item_list_performance_parent.xml
+++ b/app/src/main/res/layout/item_list_performance_parent.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/grey"
+    android:background="@color/white"
     android:layout_marginBottom="10dp"
     android:orientation="vertical">
 
@@ -20,7 +20,7 @@
             android:layout_centerInParent="true"
             android:fontFamily="@font/os_bold"
             android:textSize="16sp"
-            android:textColor="@color/white"
+            android:textColor="@color/grey"
             android:text="Network Interfaces"
             android:gravity="center"/>
 
@@ -75,6 +75,6 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:background="@color/light_grey"/>
+        android:background="@color/white_2"/>
 
 </LinearLayout>
