--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -32,4 +32,8 @@
         <item name="android:padding">5dp</item>
     </style>
 
+    <style name="CustomColorProgressBar">
+        <item name="colorAccent">@color/black</item>
+    </style>
+
 </resources>
