--- a/app/src/main/res/layout/item_list_history.xml
+++ b/app/src/main/res/layout/item_list_history.xml
@@ -7,15 +7,21 @@
     android:paddingVertical="5dp"
     android:paddingHorizontal="5dp">
 
-    <TextView
-        android:id="@+id/tv_history_type_chart"
+    <com.facebook.shimmer.ShimmerFrameLayout
+        android:id="@+id/sf_history_chart_loading"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Disk I/O"
-        android:textSize="16sp"
-        android:textColor="@color/grey"
-        android:fontFamily="@font/cg_bold"
-        android:layout_marginBottom="10dp"/>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginBottom="10dp">
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:background="@color/grey_2" />
+
+    </com.facebook.shimmer.ShimmerFrameLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_history_chart_loading"
@@ -70,12 +76,44 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <com.github.mikephil.charting.charts.LineChart
-        android:id="@+id/lc_history_latency_chart"
+    <LinearLayout
+        android:id="@+id/ll_history_body"
         android:layout_width="match_parent"
-        android:layout_height="230dp"
+        android:layout_height="wrap_content"
         android:visibility="gone"
-        android:background="@drawable/bg_spinner_rounded_white"
-        android:elevation="10dp"/>
+        android:orientation="vertical">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp">
+
+            <TextView
+                android:id="@+id/tv_history_type_chart"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:text="Disk I/O"
+                android:textSize="16sp"
+                android:textColor="@color/grey"
+                android:fontFamily="@font/cg_bold"/>
+
+            <ImageView
+                android:id="@+id/iv_history_download"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_download"
+                android:layout_alignParentEnd="true"/>
+
+        </RelativeLayout>
+
+        <com.github.mikephil.charting.charts.LineChart
+            android:id="@+id/lc_history_latency_chart"
+            android:layout_width="match_parent"
+            android:layout_height="230dp"
+            android:background="@drawable/bg_spinner_rounded_white"
+            android:elevation="10dp"/>
+
+    </LinearLayout>
 
 </LinearLayout>
