--- a/app/src/main/res/layout/item_list_history.xml
+++ b/app/src/main/res/layout/item_list_history.xml
@@ -7,21 +7,54 @@
     android:paddingVertical="5dp"
     android:paddingHorizontal="5dp">
 
-    <com.facebook.shimmer.ShimmerFrameLayout
-        android:id="@+id/sf_history_chart_loading"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         android:layout_marginBottom="10dp">
 
-        <View
+        <com.facebook.shimmer.ShimmerFrameLayout
+            android:id="@+id/sf_history_chart_loading"
             android:layout_width="match_parent"
-            android:layout_height="20dp"
-            android:background="@color/grey_2" />
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
 
-    </com.facebook.shimmer.ShimmerFrameLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="25dp"
+                android:background="@color/grey_2" />
+
+        </com.facebook.shimmer.ShimmerFrameLayout>
+
+        <RelativeLayout
+            android:id="@+id/rl_history_header"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
+
+            <TextView
+                android:id="@+id/tv_history_type_chart"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:text="Disk I/O"
+                android:textSize="16sp"
+                android:textColor="@color/grey"
+                android:fontFamily="@font/cg_bold"/>
+
+            <ImageView
+                android:id="@+id/iv_history_download"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_download"
+                android:layout_alignParentEnd="true"/>
+
+        </RelativeLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_history_chart_loading"
@@ -55,65 +88,60 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/cl_history_chart_empty"
+        android:id="@+id/cl_history_chart_error"
         android:layout_width="match_parent"
         android:layout_height="230dp"
         android:visibility="gone"
         android:background="@drawable/bg_spinner_rounded_white">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
+        <ImageView
+            android:id="@+id/iv_history_chart_error"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:src="@drawable/ic_conn_refused"/>
+
+        <TextView
+            android:id="@+id/tv_history_chart_error"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/iv_history_chart_error"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="5dp"
             android:text="There is no data, try asking the administator!"
             android:textSize="14sp"
             android:textAlignment="center"
             android:textColor="@color/grey"
             android:fontFamily="@font/cg_bold"/>
 
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_history_chart_retry"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            app:layout_constraintTop_toBottomOf="@id/tv_history_chart_error"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:backgroundTint="@color/black"
+            android:textAllCaps="false"
+            android:text="Retry"
+            android:textSize="14sp"
+            android:fontFamily="@font/cg_bold"
+            app:cornerRadius="10dp"/>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <LinearLayout
-        android:id="@+id/ll_history_body"
+    <com.github.mikephil.charting.charts.LineChart
+        android:id="@+id/lc_history_chart"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="230dp"
         android:visibility="gone"
-        android:orientation="vertical">
+        android:background="@drawable/bg_spinner_rounded_white"
+        android:elevation="10dp"/>
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp">
-
-            <TextView
-                android:id="@+id/tv_history_type_chart"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:text="Disk I/O"
-                android:textSize="16sp"
-                android:textColor="@color/grey"
-                android:fontFamily="@font/cg_bold"/>
-
-            <ImageView
-                android:id="@+id/iv_history_download"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_download"
-                android:layout_alignParentEnd="true"/>
-
-        </RelativeLayout>
-
-        <com.github.mikephil.charting.charts.LineChart
-            android:id="@+id/lc_history_latency_chart"
-            android:layout_width="match_parent"
-            android:layout_height="230dp"
-            android:background="@drawable/bg_spinner_rounded_white"
-            android:elevation="10dp"/>
-
-    </LinearLayout>
 
 </LinearLayout>
